<resources>
    <string name="app_name">Trail2</string>
    <string name="toggle_theme">toggle_theme</string>
    <string name="add_task">add_task</string>
    <string name="completed">Completed</string>
    <string name="todo">Todo</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="pending_tasks">TODAY\'S TASKS</string>
    <string name="edit_task">edit_task</string>
    <string name="delete_task">delete_task</string>
    <string name="sample_description">sample_description</string>
    <string name="hello_from_fragmentcompleted">FINISHED</string>
    <string name="sample_title1">sample_title1</string>
    <string name="sample_description1">sample_description1</string>
    <string name="title">Enter your title</string>
    <string name="description">Task Details</string>
    <string name="add">Add</string>
    <string name="cancel">Cancel</string>
</resources>