<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="16dp"
        app:cardElevation="4dp"
        app:strokeColor="@color/black"
        app:strokeWidth="2dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/dialogLayout"
            android:padding="12dp"
            android:layout_margin="12dp"
            android:background="@android:color/transparent">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/titleEdit"
                android:inputType="text"
                android:hint="@string/title"
                android:textColorHint="@color/black"
                app:layout_constraintBottom_toTopOf="@id/descriptionEdit"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                />

            <EditText
                android:id="@+id/descriptionEdit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/description"
                android:inputType="textMultiLine"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/titleEdit"
                android:textColorHint="@color/black"/>
            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/btnCancel"
                android:layout_margin="8dp"
                app:layout_constraintTop_toBottomOf="@+id/descriptionEdit"
                android:text="@string/cancel"
                android:background="@drawable/btn_shape"
                android:textColor="@color/white"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@id/btnAdd"/>
            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/btnAdd"
                android:layout_margin="8dp"
                android:background="@drawable/btn_shape"
                android:textColor="@color/white"
                android:text="@string/add"
                app:layout_constraintTop_toBottomOf="@id/descriptionEdit"
                app:layout_constraintStart_toEndOf="@id/btnCancel"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>
</layout>
